# ddbc

./: meson.build
source/ddbc/drivers/: pgsqlddbc.d
